  with an attempt to guess the original compression level
- File is now always verified - if md5 is not selected, then Adler32 is used

- New / changed flags: 
    --sam (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as SAM
    --bam (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as BAM
    --no-PG (new flag) refrain from adding a @PG record to the header when converting SAM->BAM or BAM->SAM
    --fastq (new flag) for genounzip/genocat - reconstruct a SAM/BAM file as FASTQ
    --vcf (new flag) genounzip/genocat - reconstruct a 23andMe file as a VCF
    --plain (new flag) in genounzip / genocat - negates implicit --bgzf
    --dump-local and --dump-b250 (renamed from dump-one-local and dump-one-b250) now output a file per VB
    --bytes (new flag) for genols - show sizes in bytes
    --dump-section (new flag)
    --show-bgzf (new flag) for genozip - show bgzf blocks
    --show-containers (new flag) for genounzip/genocat - show flow of container reconstruction
    --show-time can now accept an optional argument eg. --show-time=compressor
    --show-txt-contigs - shows contigs from the SAM/BAM header (SQ lines)
    --unbind in genols (new flag) - shows the components of bound files
    --show-dict and show-b250 now accept an optional paramter + removed --show-one-dict and --show-one-b250
    --show-digest show (md5 or Adler32) updates
    --stdout - flag canceled for compression (genozip), available for decompression (genounzip, genocat, genozip -d)

Compression improvements:
- For b250 sections that have all the same entry - store the entry only once. If the entry is word_index=0, drop the section
- Improvements in codec assignment algorithm, and use it for dictionary and some other section types in addition to b250 and local
- 30% improvment in dictionary size of disk due to consolidation of fragments and codec assignment.
- Multi-threaded decompression of dictionaries.
Cleanup:
- removed support for Visual C compiler